--- a/index.html
+++ b/index.html
@@ -1,1 +1,56 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Walden Tecnologia</title>
+  <meta name="description" content="Empresa brasileira de tecnologia especializada em desenvolvimento de software, consultoria em TI e soluções digitais sob medida." />
+  <style>
+    body {
+      font-family: Arial, Helvetica, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f7f7f7;
+      color: #333;
+    }
+    header {
+      background: #0f172a;
+      color: #fff;
+      padding: 40px 20px;
+      text-align: center;
+    }
+    section {
+      max-width: 900px;
+      margin: 40px auto;
+      background: #fff;
+      padding: 30px;
+      border-radius: 8px;
+    }
+    h1, h2 {
+      color: #0f172a;
+    }
+    footer {
+      text-align: center;
+      padding: 20px;
+      font-size: 14px;
+      color: #666;
+    }
+    .info {
+      line-height: 1.6;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>Walden Tecnologia</h1>
+    <p>Soluções em tecnologia da informação</p>
+  </header>
+
+  <section>
+    <h2>Sobre a empresa</h2>
+    <p class="info">
+      A <strong>Walden Tecnologia Ltda</strong> é uma empresa brasileira especializada em
+      desenvolvimento de software, consultoria em tecnologia da informação,
+      manutenção de sistemas e soluções digitais sob medida para
 
