--- a/index.html
+++ b/index.html
@@ -2,55 +2,100 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Walden Tecnologia</title>
-  <meta name="description" content="Empresa brasileira de tecnologia especializada em desenvolvimento de software, consultoria em TI e soluções digitais sob medida." />
   <style>
     body {
-      font-family: Arial, Helvetica, sans-serif;
       margin: 0;
-      padding: 0;
-      background: #f7f7f7;
-      color: #333;
+      font-family: Arial, Helvetica, sans-serif;
+      background: #f5f6f8;
+      color: #222;
     }
     header {
-      background: #0f172a;
+      background: linear-gradient(135deg, #0f172a, #020617);
       color: #fff;
-      padding: 40px 20px;
+      padding: 60px 20px;
       text-align: center;
     }
     section {
       max-width: 900px;
       margin: 40px auto;
       background: #fff;
-      padding: 30px;
-      border-radius: 8px;
+      padding: 32px;
+      border-radius: 10px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.06);
     }
-    h1, h2 {
+    h2 {
+      margin-top: 0;
       color: #0f172a;
     }
     footer {
       text-align: center;
-      padding: 20px;
+      padding: 30px;
       font-size: 14px;
       color: #666;
     }
-    .info {
-      line-height: 1.6;
+    .label {
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
 
-  <header>
-    <h1>Walden Tecnologia</h1>
-    <p>Soluções em tecnologia da informação</p>
-  </header>
+<header>
+  <h1>Walden Tecnologia</h1>
+  <p>Soluções em tecnologia da informação</p>
+</header>
 
-  <section>
-    <h2>Sobre a empresa</h2>
-    <p class="info">
-      A <strong>Walden Tecnologia Ltda</strong> é uma empresa brasileira especializada em
-      desenvolvimento de software, consultoria em tecnologia da informação,
-      manutenção de sistemas e soluções digitais sob medida para
+<section>
+  <h2>Sobre a empresa</h2>
+  <p>
+    A <strong>Walden Tecnologia Ltda</strong> é uma empresa brasileira especializada em
+    desenvolvimento de software, consultoria em tecnologia da informação,
+    manutenção de sistemas e soluções digitais sob medida para empresas e profissionais.
+  </p>
+</section>
 
+<section>
+  <h2>Serviços</h2>
+  <ul>
+    <li>Desenvolvimento de software sob encomenda</li>
+    <li>Consultoria em tecnologia da informação</li>
+    <li>Manutenção e suporte de sistemas</li>
+    <li>Desenvolvimento de aplicações web</li>
+    <li>Tratamento de dados e soluções digitais</li>
+  </ul>
+</section>
+
+<section>
+  <h2>Dados legais</h2>
+  <p><span class="label">Razão social:</span> Walden Tecnologia Ltda</p>
+  <p><span class="label">Nome fantasia:</span> Walden Tecnologia</p>
+  <p><span class="label">CNPJ:</span> 30.715.055/0001-49</p>
+  <p><span class="label">Data de abertura:</span> 15/06/2018</p>
+  <p><span class="label">Natureza jurídica:</span> Sociedade Empresária Limitada</p>
+</section>
+
+<section>
+  <h2>Endereço</h2>
+  <p>
+    Av. das Araucárias, Lotes 4530, 4750 e 4790<br/>
+    Condomínio Praça das Garças – Bloco I – Apto 1402<br/>
+    Águas Claras – Brasília / DF<br/>
+    CEP 71936-250 – Brasil
+  </p>
+</section>
+
+<section>
+  <h2>Contato</h2>
+  <p><span class="label">Responsável legal:</span> Celso Miguel Lago Filho</p>
+  <p><span class="label">E-mail:</span> waldentecnologia@outlook.com</p>
+  <p><span class="label">Telefone:</span> +55 (61) 99854-1687</p>
+</section>
+
+<footer>
+  © 2018–2025 Walden Tecnologia Ltda. Todos os direitos reservados.
+</footer>
+
+</body>
+</html>
