Update contact email in terms.html

--- a/terms.html
+++ b/terms.html
@@ -33,7 +33,7 @@ Todo o conteúdo presente neste site é de propriedade da
 <h2>Contato</h2>
 <p>
 Em caso de dúvidas, entre em contato pelo e-mail:<br>
-<strong>contato@waldentecnologia.com</strong>
+<strong>waldentecnologia@outlook.com</strong>
 </p>
 
 <p>
