--- a/index.html
+++ b/index.html
@@ -38,35 +38,4 @@
       text-decoration: underline;
     }
   </style>
-</head>
-<body>
-
-<header>
-  <h1>Walden Tecnologia</h1>
-  <p>Soluções em tecnologia da informação</p>
-</header>
-
-<main>
-  <h2>Sobre a empresa</h2>
-  <p>
-    A <strong>Walden Tecnologia Ltda</strong> é uma empresa brasileira especializada em
-    desenvolvimento de software, consultoria em tecnologia da informação,
-    manutenção de sistemas e soluções digitais sob medida.
-  </p>
-
-  <h3>Dados da empresa</h3>
-  <ul>
-    <li><strong>Razão social:</strong> Walden Tecnologia Ltda</li>
-    <li><strong>CNPJ:</strong> 30.715.055/0001-49</li>
-    <li><strong>Sede:</strong> Brasília – DF</li>
-  </ul>
-</main>
-
-<footer>
-  © 2018–2025 Walden Tecnologia Ltda ·
-  <a href="privacy.html">Política de Privacidade</a> ·
-  <a href="terms.html">Termos de Uso</a>
-</footer>
-
-</body>
-</html>
+</hea
