--- a/index.html
+++ b/index.html
@@ -38,4 +38,38 @@
       text-decoration: underline;
     }
   </style>
-</hea
+</head>
+<body>
+
+<header>
+  <h1>Walden Tecnologia</h1>
+  <p>Soluções em tecnologia da informação</p>
+</header>
+
+<main>
+  <h2>Sobre a empresa</h2>
+  <p>
+    A <strong>Walden Tecnologia Ltda</strong> é uma empresa brasileira especializada
+    em desenvolvimento de software, consultoria em tecnologia da informação,
+    manutenção de sistemas e soluções digitais sob medida.
+  </p>
+
+  <h3>Informações legais</h3>
+  <ul>
+    <li><strong>Razão social:</strong> Walden Tecnologia Ltda</li>
+    <li><strong>Nome fantasia:</strong> Walden Tecnologia</li>
+    <li><strong>CNPJ:</strong> 30.715.055/0001-49</li>
+    <li><strong>Endereço:</strong> Águas Claras, Brasília – DF, Brasil</li>
+    <li><strong>Responsável legal:</strong> Celso Miguel Lago Filho</li>
+    <li><strong>E-mail:</strong> contato@waldentecnologia.com</li>
+  </ul>
+</main>
+
+<footer>
+  © 2018–2025 Walden Tecnologia Ltda ·
+  <a href="privacy.html">Política de Privacidade</a> ·
+  <a href="terms.html">Termos de Uso</a>
+</footer>
+
+</body>
+</html>
