Update legal representative email address

--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
     <li><strong>Nome fantasia:</strong> Walden Tecnologia</li>
     <li><strong>CNPJ:</strong> 30.715.055/0001-49</li>
     <li><strong>Endereço:</strong> Águas Claras, Brasília – DF, Brasil</li>
-    <li><strong>Responsável legal:</strong> Celso Miguel Lago Filho</li>
-    <li><strong>E-mail:</strong> contato@waldentecnologia.com</li>
+    <li><strong>E-mail:</strong> waldentecnologia@outlook.com</li>
   </ul>
 </main>
 
